applying css fixes to fix navbar display on safari - see #134

--- a/sites/all/themes/yaktheme/css/header.css
+++ b/sites/all/themes/yaktheme/css/header.css
@@ -191,7 +191,8 @@
   -webkit-mask-image: var(--i-sign-out);
 }
 
-.dropdown:focus-within .dropdown-menu {
+.dropdown:focus-within .dropdown-menu,
+.dropdown:hover .dropdown-menu {
   display: block;
 }
 
